<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EditAnywhere</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_entry_list">词条列表</string>
    <string name="menu_book_list">笔记本列表</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>

    <!--    词条相关-->
    <string name="entry_name">词条名称</string>
    <string name="entry_version">词条版本</string>
    <string name="entry_content">词条内容</string>
    <string name="entry_delete">词条删除</string>
    <string name="entry_create_time">词条创建时间</string>
    <string name="entry_update_time">词条更新时间</string>
    <string name="entry_info">词条详情</string>
    <string name="entry_add">添加词条</string>
    <string name="entry_edit">添加内容</string>
    <string name="entry_edit_ensure">确认修改</string>
    <string name="entry_edit_show_checkbox">显示复选框</string>


    <string name="entry_content_edit">修改</string>
    <string name="entry_content_delete">删除</string>
    <string name="entry_content_copy">复制</string>


    <!--    对话框dialog-->
    <string name="dialog_title">标题</string>
    <string name="dialog_input_text">输入文本</string>
    <string name="dialog_ensure_tip">确定提示</string>
    <string name="dialog_cancel_tip">取消提示</string>

    <!--    服务器设置相关-->
    <string name="settings_title">设置</string>
    <string name="settings_server_address">设置服务器地址</string>
    <string name="settings_button_edit">设置修改按钮</string>
    <string name="settings_button_ensure">设置修改按钮</string>
    <string name="settings_menu_reset">恢复默认</string>
    <string name="settings_import_from_csv_file">从csv文件导入</string>
    <string name="settings_export_to_csv_file">导出到csv文件</string>
    <string name="settings_import_from_json_file">从json文件导入</string>
    <string name="settings_export_to_json_file">导出到json文件</string>
    <!--关于-->
    <string name="about_title">关于标题</string>
    <string name="about_content">关于内容</string>

    <!--编辑框-->
    <string name="edit_line_default_content">输入内容</string>
    <string name="edit_line_edit_desc">编辑框修改</string>
    <string name="edit_line_edit_ensure">编辑框确认</string>
    <string name="check_line_content">检查框内容描述</string>
    <string name="check_line_content_local_mode">是否开启本地模式</string>

    <!--笔记本-->
    <string name="book_all">全部</string>
    <string name="book_name">笔记本名称</string>
    <string name="book_desc">笔记本描述</string>
    <!--词条操作-->
    <string name="action_move">移动到</string>
    <string name="action_delete">删除</string>
    <string name="action_select_all">全选</string>
    <string name="action_cancel">取消</string>
    <string name="search_hint">查找指定笔记本</string>
    <string name="select_notebook">选择笔记本</string>

<!--    提示信息-->
    <string name="tip_copied">已复制</string>
</resources>