<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_entry_list">

    <fragment
        android:id="@+id/fragment_entry_list"
        android:name="com.example.editanywhere.ui.fragments.EntryListFragment"
        android:label="@string/menu_entry_list"
        tools:layout="@layout/fragment_entry_list" />

    <fragment
        android:id="@+id/fragment_settings"
        android:name="com.example.editanywhere.ui.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/fragment_about"
        android:name="com.example.editanywhere.ui.fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>