<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/menu_action_select_all"
            android:icon="@drawable/ic_action_select_all"
            android:title="@string/action_select_all"
            android:visible="true"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_action_move"
            android:icon="@drawable/ic_action_move_to"
            android:title="@string/action_move"
            android:visible="true"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_action_delete"
            android:icon="@drawable/ic_action_delete"
            android:title="@string/action_delete"
            android:visible="true"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_action_cancel"
            android:icon="@drawable/ic_action_cancel"
            android:title="@string/action_delete"
            android:visible="true"
            app:showAsAction="ifRoom" />
    </group>

</menu>